objects/AcctSeedERP__Inventory_Balance__c.object
<CustomObject>
    <fields>
        <fullName>AcctSeedERP__Available_Quantity__c</fullName>
        <formula>AcctSeedERP__Purchasing_Quantity__c + AcctSeedERP__Inbound_Quantity__c - AcctSeedERP__Sales_Order_Quantity__c - AcctSeedERP__Manufacturing_Quantity__c - AcctSeedERP__Outbound_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inbound_Accounting_Quantity__c</fullName>
        <label>Inbound Accounting Quantity</label>
        <summarizedField>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Type__c</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Inbound_Quantity__c</fullName>
        <label>Inbound Quantity</label>
        <summarizedField>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ledger</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Ledger__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Transactional</value>
            </filterItems>
            <infoMessage>Only Transactional Ledgers are allowed.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Inventory Quantity Available</relationshipLabel>
        <relationshipName>Inventory_Quantity_Available</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeedERP__Location__c.AcctSeedERP__Warehouse__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeedERP__Warehouse__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeedERP__Location__c</referenceTo>
        <relationshipLabel>Inventory Quantity Available</relationshipLabel>
        <relationshipName>Inventory_Balances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Manufacturing_Quantity__c</fullName>
        <label>Manufacturing Quantity</label>
        <summarizedField>AcctSeedERP__Manufacturing_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Manufacturing_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Outbound_Accounting_Quantity__c</fullName>
        <label>Outbound Accounting Quantity</label>
        <summarizedField>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Type__c</field>
            <operation>equals</operation>
            <value>Accounting</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Outbound_Quantity__c</fullName>
        <label>Outbound Quantity</label>
        <summarizedField>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Quantity Available</relationshipLabel>
        <relationshipName>Inventory_Balance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Purchasing_Quantity__c</fullName>
        <label>Purchasing Quantity</label>
        <summarizedField>AcctSeedERP__Purchase_Order_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Purchase_Order_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Quantity__c</fullName>
        <label>Sales Order Quantity</label>
        <summarizedField>AcctSeedERP__Sales_Order_Inventory_Movement__c.AcctSeedERP__Quantity__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Sales_Order_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Warehouse__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
        <relationshipLabel>Inventory Quantity Available</relationshipLabel>
        <relationshipName>Inventory_Balance</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inbound_Total_Value__c</fullName>
        <label>Inbound Total Value</label>
        <summarizedField>AcctSeedERP__Inbound_Inventory_Movement__c.Value__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Inbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outbound_Total_Value__c</fullName>
        <label>Outbound Total Value</label>
        <summarizedField>AcctSeedERP__Outbound_Inventory_Movement__c.Value__c</summarizedField>
        <summaryForeignKey>AcctSeedERP__Outbound_Inventory_Movement__c.AcctSeedERP__Inventory_Balance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Inbound_Value__c</fullName>
        <description>rolls up totals from Total Burdened Value of all inbound movements - used with RH</description>
        <inlineHelpText>rolls up totals from Total Burdened Value of all inbound movements</inlineHelpText>
        <label>Total Inbound Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outbound_Value__c</fullName>
        <description>rolls up Total Burdened Value from all related Outbound Inventory Movements. - used with RH</description>
        <inlineHelpText>rolls up Total Burdened Value from all related Outbound Inventory Movements.</inlineHelpText>
        <label>Total Outbound Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Inbound_Total_Value__c - Outbound_Total_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Inventory Quantity Available</label>
    <listViews>
        <fullName>AcctSeedERP__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeedERP__Product__c</columns>
        <columns>AcctSeedERP__Warehouse__c</columns>
        <columns>AcctSeedERP__Location__c</columns>
        <columns>AcctSeedERP__Available_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{00000}</displayFormat>
        <label>Inventory Quantity Available Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Quantity Available</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeedERP__Location_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Location__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Location__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Outbound_Less_Than_Equal_Inbound</fullName>
        <active>true</active>
        <description>Ensure outbound inventory movements are less than or equal to outbound inventory movements</description>
        <errorConditionFormula>(AcctSeedERP__Manufacturing_Quantity__c +  AcctSeedERP__Purchasing_Quantity__c +  AcctSeedERP__Inbound_Quantity__c) &lt; ( AcctSeedERP__Sales_Order_Quantity__c +  AcctSeedERP__Outbound_Quantity__c)</errorConditionFormula>
        <errorMessage>The aggregate outbound quantity on the inventory balance cannot be more than the aggregate inbound quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Prevent_Update_Location_if_Movements</fullName>
        <active>true</active>
        <description>Prevent changing the location if there are associated inventory movements</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; (AcctSeedERP__Inbound_Quantity__c &gt; 0 ||  AcctSeedERP__Outbound_Quantity__c &gt; 0 ||  AcctSeedERP__Manufacturing_Quantity__c &gt; 0 ||  AcctSeedERP__Sales_Order_Quantity__c &gt; 0 ||  AcctSeedERP__Purchasing_Quantity__c &gt; 0) &amp;&amp;  PRIORVALUE(AcctSeedERP__Location__c) != AcctSeedERP__Location__c</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Location__c</errorDisplayField>
        <errorMessage>You cannot change the location if there are associated inventory movements. You must delete all inventory movements in order to change the location.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Prevent_Update_Product_if_Movements</fullName>
        <active>true</active>
        <description>Prevent changing the product if there are associated inventory movements</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; (AcctSeedERP__Inbound_Quantity__c &gt; 0 ||  AcctSeedERP__Outbound_Quantity__c &gt; 0 ||  AcctSeedERP__Manufacturing_Quantity__c &gt; 0 ||  AcctSeedERP__Sales_Order_Quantity__c &gt; 0 ||  AcctSeedERP__Purchasing_Quantity__c &gt; 0) &amp;&amp;  PRIORVALUE(AcctSeedERP__Product__c) != AcctSeedERP__Product__c</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>You cannot change the product if there are associated inventory movements. You must delete all inventory movements in order to change the product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Prevent_Update_Warehouse_if_Movements</fullName>
        <active>true</active>
        <description>Prevent changing the warehouse if there are associated inventory movements</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; (AcctSeedERP__Inbound_Quantity__c &gt; 0 ||  AcctSeedERP__Outbound_Quantity__c &gt; 0 ||  AcctSeedERP__Manufacturing_Quantity__c &gt; 0 ||  AcctSeedERP__Sales_Order_Quantity__c &gt; 0 ||  AcctSeedERP__Purchasing_Quantity__c &gt; 0) &amp;&amp;  PRIORVALUE(AcctSeedERP__Warehouse__c) != AcctSeedERP__Warehouse__c</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Warehouse__c</errorDisplayField>
        <errorMessage>You cannot change the warehouse if there are associated inventory movements. You must delete all inventory movements in order to change the warehouse.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Product_Is_Inventory_Product</fullName>
        <active>true</active>
        <description>Only inventoried products can be associated with an inventory balance</description>
        <errorConditionFormula>AcctSeedERP__Product__r.AcctSeed__Inventory_Product__c = false</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>Only a product where the inventory product field is true can be associated with an inventory balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Product_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Product__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Product__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeedERP__Warehouse_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(AcctSeedERP__Warehouse__c)</errorConditionFormula>
        <errorDisplayField>AcctSeedERP__Warehouse__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>